embassy-executor/tests/ui/generics.stderr
error: task functions must not be generic
 --> tests/ui/generics.rs:6:1
  |
6 | async fn task<T: Sized>(_t: T) {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
